--- a/Lifegiver_test/lifegiver/templates/donor_dashboard.html
+++ b/Lifegiver_test/lifegiver/templates/donor_dashboard.html
@@ -11,25 +11,41 @@
         <ul>
             <li>
                 <a class="active d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donor_dashboard') }}">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96C0 60.7 28.7 32 64 32H448c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zm64 64V416H224V160H64zm384 0H288V416H448V160z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                        <path
+                            d="M0 96C0 60.7 28.7 32 64 32H448c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zm64 64V416H224V160H64zm384 0H288V416H448V160z" />
+                    </svg>
                     <span>Dashboard</span>
                 </a>
             </li>
             <li>
                 <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donor_profile') }}">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                        <path
+                            d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
+                    </svg>
                     <span>Profile</span>
                 </a>
             </li>
             <li>
                 <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('don_requests') }}">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                        <path
+                            d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
+                    </svg>
                     <span>Request</span>
                 </a>
             </li>
             <li>
                 <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('urgent_requests') }}">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                        <path
+                            d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z" />
+                    </svg>
                     <span>Urgent Request</span>
                 </a>
             </li>
@@ -42,7 +58,11 @@
             </div>
             <div class="icons d-flex align-center">
                 <span class="notification p-relative">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 0c-17.7 0-32 14.3-32 32V51.2C119 66 64 130.6 64 208v18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416H416c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3H224 160c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                        <path
+                            d="M224 0c-17.7 0-32 14.3-32 32V51.2C119 66 64 130.6 64 208v18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416H416c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3H224 160c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z" />
+                    </svg>
                 </span>
                 <img class="rounded-circle account-img" src="{{ image_file }}">
             </div>
@@ -59,13 +79,20 @@
                 </div>
                 <img id="pic" class="rounded-circle count-imgac" src="{{ image_file }}">
                 <div class="body txt-c d-flex p-20 mt-20 mb-20 block-mobile">
-                    <div>Donor Name<span class="d-block c-grey fs-14 mt-10">{{ current_user.first_name ~ ' ' ~ current_user.last_name }}</span></div>
-                    <div>Your Donation Count is <span class="d-block c-grey fs-14 mt-10"><a class="mr-2" href="{{ url_for('donation_history', donor_id=current_user.id) }}">{{ current_user.donation_count }}</span></div>
-                    <div>View Nearby Hospitals <span class="d-block c-grey fs-14 mt-10"><a class="mr-2" href="{{ url_for('nearby_hospitals', donor_id=current_user.id) }}">Click Here</a></span></div>
+                    <div>Donor Name<span class="d-block c-grey fs-14 mt-10">{{ current_user.first_name ~ ' ' ~
+                            current_user.last_name }}</span></div>
+                    <div>Your Donation Count is : {{current_user.donation_count }} 
+                        <a class="d-block c-grey fs-14 mt-10"><a  id="buttom" class="mr-2"
+                                href="{{ url_for('donation_history', donor_id=current_user.id) }}"> Donation History</a>
+                    </div>
+                    <div>View Nearby Hospitals <span class="d-block c-grey fs-14 mt-10"><a id="buttom" class="mr-2"
+                                href="{{ url_for('nearby_hospitals', donor_id=current_user.id) }}">Click Here</a></span>
+                    </div>
                 </div>
-                <a href="{{ url_for('donor_profile') }}" class="visit d-block fs-14 bg-blue c-white w-fit btn-shape">Profile</a>
+                <a href="{{ url_for('donor_profile') }}"
+                    class="visit d-block fs-14 bg-blue c-white w-fit btn-shape">Profile</a>
             </div>
         </div>
     </div>
 </div>
-        {% endblock content %}
+{% endblock content %}
