--- a/Lifegiver_test/lifegiver/templates/home.html
+++ b/Lifegiver_test/lifegiver/templates/home.html
@@ -17,7 +17,7 @@
             <span class="sp2">Don't let fools or mosquitoes get blood; make good use of it. Donate blood and save a
                life</span>
             </p>
-            <a href="">Donate</a>
+            <a href="{{ url_for('don_requests')}}">Donate</a>
          </div>
       </div>
    </div>
