--- a/Lifegiver_test/lifegiver/templates/hospital_dashboard.html
+++ b/Lifegiver_test/lifegiver/templates/hospital_dashboard.html
@@ -59,8 +59,8 @@
                 <div class="body txt-c d-flex p-20 mt-20 mb-20 block-mobile">
                     <div>Hospital Name<span class="d-block c-grey fs-14 mt-10">{{ current_user.name }}</span></div>
                     <div>Barcode <span class="d-block c-grey fs-14 mt-10">{{ current_user.barcode }}</span></div>
-                    <div>Total Donation Requests: <span class="d-block c-grey fs-14 mt-10"><a class="mr-2" href="{{ url_for('requests_history', name=current_user.name) }}">{{ requests_count }}</a></span></div>
-                    <div>Total Urgent Donation Requests:  <span class="d-block c-grey fs-14 mt-10"><a class="mr-2" href="{{ url_for('hospital_urgent_requests', name=current_user.name) }}">{{ urgent_requests_count }}</a></span></div>
+                    <div>Total Donation Requests: {{ requests_count }}<span class="d-block c-grey fs-14 mt-10"><a id="buttom" class="mr-2" href="{{ url_for('requests_history', name=current_user.name) }}">Donation History</a></span></div>
+                    <div>Total Urgent Donation Requests: {{ urgent_requests_count }}<span class="d-block c-grey fs-14 mt-10"><a id="buttom" class="mr-2" href="{{ url_for('hospital_urgent_requests', name=current_user.name) }}">Click Here</a></span></div>
                 </div>
                 <a href="{{ url_for('hospital_profile') }}" class="visit d-block fs-14 bg-blue c-white w-fit btn-shape">Profile</a>
             </div>
