--- a/Lifegiver_test/lifegiver/templates/layout.html
+++ b/Lifegiver_test/lifegiver/templates/layout.html
@@ -116,8 +116,9 @@
       <div class="container">
         <a href="#" class="logo">Life Giver</a>
         <p>
-          <img src="static/images/github.svg" alt="Github" />
+          <img src="../static/images/github.svg" alt="Github" />
           <a href="https://github.com/zguaidh/Test_portofolio">Life Giver _ Github</a>
+          <p class="copyright">©️ 2024 Life Giver. All rights reserved.</p>
         </p>
       </div>
     </footer>
