--- a/Lifegiver_test/lifegiver/static/css/dashborad_don.css
+++ b/Lifegiver_test/lifegiver/static/css/dashborad_don.css
@@ -248,3 +248,18 @@ body {
 #pic {
     padding-left: 20px;
 }
+
+#buttom{
+    margin-left: 10px;
+    justify-content: center;
+    padding-left: 22px;
+    padding-right: 22px;
+    color: white;
+    border: 3px solid white;
+    background-color: #8c1818;
+    border-radius: 100px;
+    font-size: large;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 7px;
+}
