--- a/Lifegiver_test/lifegiver/static/css/dashborad_hos.css
+++ b/Lifegiver_test/lifegiver/static/css/dashborad_hos.css
@@ -241,10 +241,24 @@ body {
 
 .welcome {
     border: 3px solid #8c1818;
-    min-width: 1000px !important;
+    min-width: 1100px !important;
     margin-left: 20px;
 }
 
 #pic {
     padding-left: 20px;
+}
+#buttom{
+    margin-left: 10px;
+    justify-content: center;
+    padding-left: 22px;
+    padding-right: 22px;
+    color: white;
+    border: 3px solid white;
+    background-color: #8c1818;
+    border-radius: 100px;
+    font-size: large;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 7px;
 }
