--- a/Lifegiver_test/lifegiver/templates/distance.html
+++ b/Lifegiver_test/lifegiver/templates/distance.html
@@ -1,10 +1,19 @@
 {% extends 'layout.html' %}
-
+{% block link %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/distance.css') }}" />
+{% endblock link %}
 {% block content %}
-<div class="container">
-    <h2>Route from {{ donor.first_name }} {{ donor.last_name }} to {{ hospital.name }}</h2>
-    <img src="{{ map_url }}" alt="Route Map" style="width: 100%; max-width: 600px;">
-    <br>
-    <a href="{{ directions_url }}" target="_blank">View Route on Google Maps</a>
+<div class="landing">
+    <div class="card">
+        <div class="imgBx">
+            <img src="{{ map_url }}" alt="Route Map" style="width: 100%; max-width: 600px;">
+        </div>
+        <div class="infrBx">
+            <h2>
+                Route from {{ donor.first_name }} {{ donor.last_name }} to {{ hospital.name }}
+            </h2>
+            <a id="submit" href="{{ directions_url }}" target="_blank">View Route on Google Maps</a>
+        </div>
+    </div>
 </div>
 {% endblock %}
