--- a/Lifegiver_test/lifegiver/templates/donation_history.html
+++ b/Lifegiver_test/lifegiver/templates/donation_history.html
@@ -1,34 +1,67 @@
-{% extends "layout.html" %}
+{% extends 'layout.html' %}
+{% block link %}
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/donation_history.css') }}" />
+{% endblock %}
 {% block content %}
-    {% for don in donations.items %}
+  <div id="title">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+      <!-- !Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc. -->
+      <path fill="#ffffff" d="M75 75L41 41C25.9 25.9 0 36.6 0 57.9V168c0 13.3 10.7 24 24 24H134.1c21.4 0 32.1-25.9 17-41l-30.8-30.8C155 85.5 203 64 256 64c106 0 192 86 192 192s-86 192-192 192c-40.8 0-78.6-12.7-109.7-34.4c-14.5-10.1-34.4-6.6-44.6 7.9s-6.6 34.4 7.9 44.6C151.2 495 201.7 512 256 512c141.4 0 256-114.6 256-256S397.4 0 256 0C185.3 0 121.3 28.7 75 75zm181 53c-13.3 0-24 10.7-24 24V256c0 6.4 2.5 12.5 7 17l72 72c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-65-65V152c0-13.3-10.7-24-24-24z" />
+    </svg>
+    <h1>Donation History</h1>
+  </div>
+  {% for don in donations.items %}
+    <article class="media content-section">
+      <div class="media-body" id="card">
+        <div class="article-metadata">
+          <a class="mr-2" href="#">{{ don.hospital_donation.name }}</a> <!-- using the backref : hospital -->
+          <small class="text-muted">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+              <!-- !Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc. -->
+              <path d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H64C28.7 64 0 92.7 0 128v16 48V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192 144 128c0-35.3-28.7-64-64-64H344V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H152V24zM48 192H400V448c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V192z" />
+            </svg>
+            {{ don.donation_request.request_date.strftime('%Y-%m-%d') }}
+          </small>
+        </div>
+        <h2>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+            <!-- !Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc. -->
+            <path fill="#8c1818" d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0h1.8c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z" />
+          </svg>
+          <a class="article-title" href="#">{{ 'Blood type: ' ~ don.donation_request.blood_type }}</a>
+        </h2>
 
-        <article class="media content-section">
-          <div class="media-body">
-            <div class="article-metadata">
-               
-              <a class="mr-2" href="#">{{ don.hospital_donation.name }}</a> <!--using the backref : hospital-->              
-              <small class="text-muted">{{ don.donation_request.request_date.strftime('%Y-%m-%d') }}</small>
-            </div>
-            <h2><a class="article-title" href="#">{{ 'Blood type: ' ~ don.donation_request.blood_type }}</a></h2>
+        <!-- replace # with the google maps api -->
+        <h2>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+            <!-- !Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc. -->
+            <path fill="#8c1818" d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
+          </svg>
+          <a class="article-title" href="#">{{ 'Location: ' ~ don.hospital_donation.street ~ ' ' ~ don.hospital_donation.city ~ ', ' ~ don.hospital_donation.country }}</a>
+        </h2>
 
-            <!--replace # with the google maps api-->
-            <h2><a class="article-title" href="#">{{ 'Location: ' ~ don.hospital_donation.street ~ ' ' ~ don.hospital_donation.city ~ ', ' ~ don.hospital_donation.country }}</a></h2>
-
-            <p class="article-content">{{ 'Donation date: ' ~ don.donation_date.strftime('%Y-%m-%d') }}</p>
-          </div>
-
-         
-    {% endfor %}
-    
+        <p id="expiration" class="article-content">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+            <!-- !Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc. -->
+            <path d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H64C28.7 64 0 92.7 0 128v16 48V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192 144 128c0-35.3-28.7-64-64-64H344V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H152V24zM48 192H400V448c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V192z" />
+          </svg>
+          {{ 'Donation date: ' ~ don.donation_date.strftime('%Y-%m-%d') }}
+        </p>
+      </div>
+    </article>
+  {% endfor %}
+  <div class="div">
     {% for page_num in donations.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=1) %}
       {% if page_num %}
-        {% if donations.page == page_num %} <!--adding a conditional to show on which page we are currently-->
-          <a class="btn btn-info mb-4" href="{{ url_for('donation_history', donor_id=donor_id, page=page_num) }}">{{ page_num }}</a>
+        {% if donations.page == page_num %}
+          <!-- adding a conditional to show on which page we are currently -->
+          <a id="page" class="btn btn-info mb-4" href="{{ url_for('donation_history', donor_id=donor_id, page=page_num) }}">{{ page_num }}</a>
         {% else %}
-          <a class="btn btn-outline-info mb-4" href="{{ url_for('donation_history', donor_id=donor_id, page=page_num) }}">{{ page_num }}</a>
+          <a id="page" class="btn btn-outline-info mb-4" href="{{ url_for('donation_history', donor_id=donor_id, page=page_num) }}">{{ page_num }}</a>
         {% endif %}
       {% else %}
-        ...
+        <span>. . .</span>
       {% endif %}
     {% endfor %}
-{% endblock content %}
+  </div>
+{% endblock %}
