--- a/Lifegiver_test/lifegiver/templates/hospital_requests.html
+++ b/Lifegiver_test/lifegiver/templates/hospital_requests.html
@@ -1,47 +1,77 @@
 {% extends "layout.html" %}
+{% block link %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/hospital_requests.css') }}" />
+{% endblock link %}
 {% block content %}
-    <h1 class="mb-3">Requested by {{ hospital.name }} </h1>
+<div id="title">
+  <h1 class="mb-3">Requested by {{ hospital.name }} </h1>
+</div>
     {% for req in requests.items %}
     {% if req.status == 'pending' %}
         <article class="media content-section">
-          <div class="media-body">
+          <div class="media-body" id="card">
             <div class="article-metadata">
                 <!--replace it wit the hospital name later-->
-              <a class="mr-2" href="{{ url_for('hospital_requests', name=hospital.name) }}">{{ req.hospital_request.name }}</a> <!--using the backref : hospital-->              
-              <small class="text-muted">{{ req.request_date.strftime('%Y-%m-%d') }}</small>
+              <a class="mr-2" href="#">{{ req.hospital_request.name }}</a> <!--using the backref : hospital-->              
+              <small class="text-muted"><svg xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                <path
+                  d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H64C28.7 64 0 92.7 0 128v16 48V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192 144 128c0-35.3-28.7-64-64-64H344V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H152V24zM48 192H400V448c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V192z" />
+              </svg>
+                {{ req.request_date.strftime('%Y-%m-%d') }}</small>
             </div>
-            <h2><a class="article-title" href="{{ url_for('don_request', don_request_id=req.id) }}">{{ 'Blood type: ' ~ req.blood_type }}</a></h2>
-            <h2><a class="article-title" href="#">{{ 'Request status: ' ~ req.status }}</a></h2>
+            <h2><svg xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path fill="#8c1818"
+                d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0h1.8c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z" />
+            </svg>
+              <a class="article-title" href="#">{{ 'Blood type: ' ~ req.blood_type }}</a></h2>
+            <h2><svg xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path fill="#8c1818"
+                d="M498.1 5.6c10.1 7 15.4 19.1 13.5 31.2l-64 416c-1.5 9.7-7.4 18.2-16 23s-18.9 5.4-28 1.6L284 427.7l-68.5 74.1c-8.9 9.7-22.9 12.9-35.2 8.1S160 493.2 160 480V396.4c0-4 1.5-7.8 4.2-10.7L331.8 202.8c5.8-6.3 5.6-16-.4-22s-15.7-6.4-22-.7L106 360.8 17.7 316.6C7.1 311.3 .3 300.7 0 288.9s5.9-22.8 16.1-28.7l448-256c10.7-6.1 23.9-5.5 34 1.4z" />
+            </svg>
+              <a class="article-title" href="#">{{ 'Request status: ' ~ req.status }}</a></h2>
             <!--replace # with the google maps api-->
-            <h2><a class="article-title" href="#">{{ 'Location: ' ~ req.hospital_request.street ~ ' ' ~ req.hospital_request.city ~ ', ' ~ req.hospital_request.country }}</a></h2>
-
-         
-            <p class="article-content">{{ 'Expiration date: ' ~ req.expiration_date.strftime('%Y-%m-%d') }}</p>
-          </div>
+            <h2><svg xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path fill="#8c1818"
+                d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
+            </svg>
+              <a class="article-title" href="#">{{ 'Location: ' ~ req.hospital_request.street ~ ' ' ~ req.hospital_request.city ~ ', ' ~ req.hospital_request.country }}</a></h2>
+            <p id="expiration" class="article-content"><svg xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path
+                d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H64C28.7 64 0 92.7 0 128v16 48V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192 144 128c0-35.3-28.7-64-64-64H344V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H152V24zM48 192H400V448c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V192z" />
+            </svg>
+              {{ 'Expiration date: ' ~ req.expiration_date.strftime('%Y-%m-%d') }}</p>
           <!-- A condition to show the button just when the user is a donor-->
           <div>
             {% if current_user.is_authenticated %}
                 {% if session.get('user_type') == 'donor' %}
-                  <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('schedule_donation', don_request_id=req.id) }}">Schedule Donation</a>
+                  <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('schedule_donation', don_request_id=req.id) }}">Schedule Donation</a>
                 {% endif %}
             {% else %}
             {% endif %}
             
           </div>
+        </div>
         </article>
         {% endif %}
         {% endfor %}
     
-    
-    {% for page_num in requests.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=1) %}
+    <div class="div">
+      {% for page_num in requests.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=1) %}
       {% if page_num %}
         {% if requests.page == page_num %} <!--adding a conditional to show on which page we are currently-->
-          <a class="btn btn-info mb-4" href="{{ url_for('hospital_requests', name=hospital.name, page=page_num) }}">{{ page_num }}</a>
+          <a id="page" class="btn btn-info mb-4" href="{{ url_for('hospital_requests', name=hospital.name, page=page_num) }}">{{ page_num }}</a>
         {% else %}
-          <a class="btn btn-outline-info mb-4" href="{{ url_for('hospital_requests',name=hospital.name, page=page_num) }}">{{ page_num }}</a>
+          <a id="page" class="btn btn-outline-info mb-4" href="{{ url_for('hospital_requests',name=hospital.name, page=page_num) }}">{{ page_num }}</a>
         {% endif %}
       {% else %}
-        ...
+        <span>. . .</span>
       {% endif %}
     {% endfor %}
+    </div>
+    
 {% endblock content %}
