--- a/Lifegiver_test/lifegiver/templates/nearby_hospitals.html
+++ b/Lifegiver_test/lifegiver/templates/nearby_hospitals.html
@@ -1,14 +1,24 @@
 {% extends 'layout.html' %}
-
+{% block link %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/nearby_hospitals.css') }}" />
+{% endblock link %}
 {% block content %}
-<div class="container">
-    <h2>Nearby Hospitals for {{ donor.first_name }} {{ donor.last_name }}</h2>
-    <img src="{{ map_url }}" alt="Map" style="width: 100%; max-width: 600px;">
-    <br>
-    <ul>
-        {% for hospital in hospitals %}
-        <li><a class="mr-2" href="{{ url_for('hospital_requests', name=hospital.name) }}">{{ hospital.name }}</a></li>
-        {% endfor %}
-    </ul>
+<div class="landing">
+    <div class="card">
+        <div class="imgBx">
+            <img src="{{ map_url }}" alt="Map" style="width: 100%; max-width: 600px;">
+        </div>
+        <div class="infrBx">
+            <h2>Nearby Hospitals for {{ donor.first_name }} {{ donor.last_name }}
+                <img src="../static/images/c4f6080d57bc47a4829c5e11358236ea.png" alt="">
+            </h2>
+            <ul>
+                {% for hospital in hospitals %}
+                <li><a id="submit" class="mr-2" href="{{ url_for('hospital_requests', name=hospital.name) }}">{{ hospital.name }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
 </div>
+
 {% endblock %}
