--- a/Lifegiver_test/lifegiver/templates/requests.html
+++ b/Lifegiver_test/lifegiver/templates/requests.html
@@ -54,20 +54,17 @@
   <div class="content w-full">
     <!-- Start Head -->
     <div class="head bg-white p-15 between-flex">
-      <div class="search p-relative">
-      </div>
-
+      <div class="search p-relative"></div>
       <div class="icons d-flex align-center">
         <span class="notification p-relative">
-            <svg xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-                <path
-                    d="M224 0c-17.7 0-32 14.3-32 32V51.2C119 66 64 130.6 64 208v18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416H416c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3H224 160c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z" />
-            </svg>
+          <svg xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path
+              d="M224 0c-17.7 0-32 14.3-32 32V51.2C119 66 64 130.6 64 208v18.8c0 47-17.3 92.4-48.5 127.6l-7.4 8.3c-8.4 9.4-10.4 22.9-5.3 34.4S19.4 416 32 416H416c12.6 0 24-7.4 29.2-18.9s3.1-25-5.3-34.4l-7.4-8.3C401.3 319.2 384 273.9 384 226.8V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32zm45.3 493.3c12-12 18.7-28.3 18.7-45.3H224 160c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7z" />
+          </svg>
         </span>
         <img class="rounded-circle account-img" src="{{ url_for('static', filename='images/' + image_file) }}">
-    </div>
-
+      </div>
     </div>
     <!-- End Head -->
     <h1 class="p-relative">Requests</h1>
@@ -77,37 +74,44 @@
       <div class="media-body" id="card">
         <div class="article-metadata">
           <!--replace it wit the hospital name later-->
-          <a class="mr-2" href="{{ url_for('hospital_requests', name=request.hospital_request.name) }}">{{
+          <a class="mr-2" href="#">{{
             request.hospital_request.name }}</a> <!--using the backref : hospital-->
           <small class="text-muted"> <svg xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path
+                d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H64C28.7 64 0 92.7 0 128v16 48V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192 144 128c0-35.3-28.7-64-64-64H344V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H152V24zM48 192H400V448c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V192z" />
+            </svg>
+            {{ request.request_date.strftime('%Y-%m-%d') }}</small>
+        </div>
+        <h2><svg xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path fill="#8c1818"
+              d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0h1.8c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z" />
+          </svg>
+          <a class="article-title" href="#">{{ 'Blood type: ' ~
+            request.blood_type }}</a>
+        </h2>
+        <h2><svg xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path fill="#8c1818"
+              d="M498.1 5.6c10.1 7 15.4 19.1 13.5 31.2l-64 416c-1.5 9.7-7.4 18.2-16 23s-18.9 5.4-28 1.6L284 427.7l-68.5 74.1c-8.9 9.7-22.9 12.9-35.2 8.1S160 493.2 160 480V396.4c0-4 1.5-7.8 4.2-10.7L331.8 202.8c5.8-6.3 5.6-16-.4-22s-15.7-6.4-22-.7L106 360.8 17.7 316.6C7.1 311.3 .3 300.7 0 288.9s5.9-22.8 16.1-28.7l448-256c10.7-6.1 23.9-5.5 34 1.4z" />
+          </svg>
+          <a class="article-title" href="#">{{ 'Request status: ' ~ request.status }}</a>
+        </h2>
+        <!--replace # with the google maps api-->
+        <h2><svg xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path fill="#8c1818"
+              d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
+          </svg>
+          <a class="article-title" href="#">{{ 'Location: ' ~ request.hospital_request.street ~ ' ' ~
+            request.hospital_request.city ~ ', ' ~ request.hospital_request.country }}</a>
+        </h2>
+        <p id="ex" class="article-content"> <svg xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
             <path
               d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H64C28.7 64 0 92.7 0 128v16 48V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192 144 128c0-35.3-28.7-64-64-64H344V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H152V24zM48 192H400V448c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V192z" />
           </svg>
-            {{ request.request_date.strftime('%Y-%m-%d') }}</small>
-        </div>
-        <h2><svg xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-          <path fill="#8c1818"
-            d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0h1.8c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z" />
-        </svg>
-          <a class="article-title" href="{{ url_for('don_request', don_request_id=request.id) }}">{{ 'Blood type: ' ~
-            request.blood_type }}</a></h2>
-        <h2><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#8c1818" d="M498.1 5.6c10.1 7 15.4 19.1 13.5 31.2l-64 416c-1.5 9.7-7.4 18.2-16 23s-18.9 5.4-28 1.6L284 427.7l-68.5 74.1c-8.9 9.7-22.9 12.9-35.2 8.1S160 493.2 160 480V396.4c0-4 1.5-7.8 4.2-10.7L331.8 202.8c5.8-6.3 5.6-16-.4-22s-15.7-6.4-22-.7L106 360.8 17.7 316.6C7.1 311.3 .3 300.7 0 288.9s5.9-22.8 16.1-28.7l448-256c10.7-6.1 23.9-5.5 34 1.4z"/></svg>
-          <a class="article-title" href="#">{{ 'Request status: ' ~ request.status }}</a></h2>
-        <!--replace # with the google maps api-->
-        <h2><svg xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-          <path fill="#8c1818"
-            d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
-        </svg>
-          <a class="article-title" href="#">{{ 'Location: ' ~ request.hospital_request.street ~ ' ' ~
-            request.hospital_request.city ~ ', ' ~ request.hospital_request.country }}</a></h2>
-        <p id="ex" class="article-content"> <svg xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-          <path
-            d="M152 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H64C28.7 64 0 92.7 0 128v16 48V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V192 144 128c0-35.3-28.7-64-64-64H344V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H152V24zM48 192H400V448c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V192z" />
-        </svg>
           {{ 'Expiration date: ' ~ request.expiration_date.strftime('%Y-%m-%d') }}</p>
         <!-- A condition to show the button just when the user is a donor-->
         <div>
@@ -115,13 +119,17 @@
           {% if session.get('user_type') == 'donor' %}
           <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1"
             href="{{ url_for('schedule_donation', don_request_id=request.id) }}">Schedule Donation</a>
+            <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1"
+            href="{{ url_for('hospital_requests', name=request.hospital_request.name) }}">More information about Hospital</a>
+            <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1"
+            href="{{ url_for('don_request', don_request_id=request.id) }}">Request By ID</a>
           {% endif %}
           {% else %}
-          {% endif %}
           {% endif %}
         </div>
       </div>
     </article>
+          {% endif %}
     {% endfor %}
     <div class="div">
       {% for page_num in requests.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=1) %}
@@ -138,6 +146,7 @@
       {% endfor %}
     </div>
   </div>
+</div>
 </div>
 
 {% endblock content %}
