--- a/Lifegiver_test/lifegiver/templates/urgent_requests.html
+++ b/Lifegiver_test/lifegiver/templates/urgent_requests.html
@@ -74,9 +74,7 @@
         <div class="media-body" id="card">
           <div class="article-metadata">
             <!--replace it wit the hospital name later-->
-            <a class="mr-2"
-              href="{{ url_for('hospital_urgent_requests', name=request.hospital_urgent_request.name) }}">{{
-              request.hospital_urgent_request.name }}</a> <!--using the backref : hospital-->
+            <a class="mr-2"href="#">{{request.hospital_urgent_request.name }}</a> <!--using the backref : hospital-->
             <small class="text-muted"> <svg xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                 <path
@@ -89,7 +87,7 @@
               <path fill="#8c1818"
                 d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0h1.8c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z" />
             </svg>
-            <a class="article-title" href="{{ url_for('urgent_don_request', urgent_request_id=request.id) }}">{{ 'Blood
+            <a class="article-title" href="#">{{ 'Blood
               type: ' ~ request.blood_type }}</a>
           </h2>
           <!--replace # with the google maps api-->
@@ -108,7 +106,9 @@
             {% if session.get('user_type') == 'donor' %}
             <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1"
               href="{{ url_for('urgent_donation', don_request_id=request.id) }}">Donate Now</a>
-            {% endif %}
+              <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('hospital_urgent_requests', name=request.hospital_urgent_request.name) }}">More information about Hospital</a>
+              <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('urgent_don_request', urgent_request_id=request.id) }}">Urgent Request By ID</a>
+              {% endif %}
             {% else %}
             {% endif %}
           </div>
