--- a/Lifegiver_test/lifegiver/templates/nearby_hospitals.html
+++ b/Lifegiver_test/lifegiver/templates/nearby_hospitals.html
@@ -8,7 +8,7 @@
         <div class="imgBx">
             <img src="{{ map_url }}" alt="Map" style="width: 100%; max-width: 600px;">
         </div>
-        <div class="infrBx">
+        <div class="infrBx" display="block">
             <h2>Nearby Hospitals for {{ donor.first_name }} {{ donor.last_name }}
                 <img src="../static/images/c4f6080d57bc47a4829c5e11358236ea.png" alt="">
             </h2>
